Fixed first set of tests and refined first version of working algorithm